5.0.6~beta5 (2015-02-12)


5.0.6~beta4 (2015-02-08)
FIX: corrected ITAG 18 in 360p instead of 260p

5.0.6~beta3 (2015-02-05)
UPD: improved support for live streams
UPD: improved stream selection based on container

5.0.6~beta1 (2015-02-03)
ADD: setting for hiding the channel name in the description

5.0.5 (2015-02-01)
ADD: clear search history items
UPD: replace context menu not everywhere
UPD: dropped dependency of 'requests'-module because of performance issues
FIX: Add playing video to the 'Watch History'
FIX: maybe a fix for a problem (again!) on unix systems while using python 2.7.9 + certificate verification
FIX: removed pagination for "Related Videos" - the fix before produced some nasty side-effects
FIX: Vevo signature

5.0.4 (2015-01-15)
ADD: 'Live' in search
ADD: 'Play with...' for supporting external/alternative player
ADD: live events (needed some tests and feedback)
ADD: support for user names instead of channel ids
UPD: set XBMC/KODI to at least Gotham 13.2
UPD: Setup-Wizard views based on content type (KODION update)
FIX: Playlist should work again
FIX: Pagination in APIv2
FIX: settings for hiding 'Live' menu
DEL: support for Frodo

5.0.3 (2015-01-08)
ADD: 'Disliked Videos'
ADD: 240p, 360p and 480p
UPD: adjustment in KODION classes (maybe causing problems on MAC OS X 10.10.X + Python 2.6)
UPD: Russian (thx 2 BytEvil)
UPD: Spanish (thx 2 PatOso)
UPD: Polish (thx 2 D.K.)
FIX: German translation
FIX: some Frodo updates

5.0.2 (2015-01-01)
ADD: Support for shared playlists via Yatse
ADD: 'Play from here' for playlists
ADD: 'Queue Video'
FIX: German translation
FIX: Portuguese (Brazil) (thx 2 ASH_Macedo)

5.0.1 (2014-12-31)
ADD: 'Play all' (default, reverse, shuffle)
ADD: Italian (thx 2 peppe_sr)
ADD: Portuguese (Brazil) (thx 2 ASH_Macedo)
ADD: Hungarian (thx 2 gyeben)
ADD: Portuguese (thx 2 enen92)
ADD: Polish (thx 2 D.K.)
ADD: Russian (thx 2 BytEvil)
ADD: Spanish (thx 2 PatOso)
ADD: French (thx 2 roondar)
UPD: support for '1080XF' and 'Xperience1080'