@@ -16,7 +16,7 @@
     <category label="30516">
         <setting id="youtube.folder.sign.in.show" type="bool" label="30111" default="true"/>
         <setting id="youtube.folder.my_subscriptions.show" type="bool" label="30510" default="true"/>
-        <setting id="youtube.folder.what_to_watch.show" type="bool" label="30513" default="true"/>
+        <setting id="youtube.folder.popular_right_now.show" type="bool" label="30513" default="true"/>
         <setting id="youtube.folder.my_channel.show" type="bool" label="30507" default="true"/>
         <setting id="youtube.folder.watch_later.show" type="bool" label="30107" default="true"/>
         <setting id="youtube.folder.liked_videos.show" type="bool" label="30508" default="true"/>
