@@ -1,5 +1,6 @@
 5.0.6~beta5 (2015-02-12)
-
+FIX: 'What to watch' => 'Popular right now'
+FIX: don't crash while trying to play rtmpe
 
 5.0.6~beta4 (2015-02-08)
 FIX: corrected ITAG 18 in 360p instead of 260p
